--- a/index.html
+++ b/index.html
@@ -9,15 +9,25 @@
 <body>
     <header>
         <div class="logo-container">
-             <img src="logo.png" alt="" class="logo-img">
+             <img src="/MySportProject/resourses/images/main-logo.png" alt="" class="logo-img">
         </div>
         <div class="line">
             <div class="nav">
-            <a href="" target="_blank" class="nav-a">Все упражнения</a>
+            <a href="exercise.html" target="_blank" class="nav-a">Все упражнения</a>
             <a href="about.html" target="_blank" class="nav-a">О нас</a>
         </div>
         </div>
     </header>
+    <section class="card-container">
+           <div class="card">
+                <img src="/MySportProject/resourses/images/about-logo.png" alt="" class="card-img">
+                <p class="card-text">Что такое MySport?<a href="about.html" target="_blank">Узнать больше</a></p>
+           </div>
+           <div class="card">
+                <img src="/MySportProject/resourses/images/exercise-logo.png" alt="" class="card-img">
+                <p class="card-text">Весь список упражнений<a href="exercise.html" target="_blank">Перейти</a></p>
+           </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
