added filters to exercise.html

--- a/about.html
+++ b/about.html
@@ -13,14 +13,14 @@
         </div>
         <div class="line">
             <div class="nav">
-            <a href="index.html" target="_blank" class="nav-a">Главная</a>
-            <a href="exercise.html" target="_blank" class="nav-a">Все упражнения</a>
+            <a href="index.html" class="nav-a">Главная</a>
+            <a href="exercise.html" class="nav-a">Все упражнения</a>
         </div>
         </div>
     </header>
     <main>
         <p class="about_text">MySport — это сайт, где можно быстро найти спортивные упражнения для любых целей: силы, выносливости или гибкости. Он помогает подобрать подходящие варианты и собрать собственную программу тренировок без лишних сложностей.
-Работает сервис на базе открытого <a href="https://wger.de/en/software/api" target="_blank">API Wger Workout Manager</a>. Это большая база упражнений с описаниями, картинками и информацией о том, какие мышцы задействованы. Благодаря этому MySport показывает проверенные данные и делает поиск удобным и понятным.
+Работает сервис на базе открытого <a href="https://www.api-ninjas.com/api/exercises" target="_blank" class="card-a">Exercises API</a>. Это большая база упражнений с описаниями, картинками и информацией о том, какие мышцы задействованы. Благодаря этому MySport показывает проверенные данные и делает поиск удобным и понятным.
 В итоге MySport — это простой инструмент для тех, кто хочет тренироваться эффективно и разнообразно. Здесь легко найти нужные упражнения и составить план, который подходит именно вам.</p>
     </main>
     <script src="script.js"></script>
