--- a/exercise.html
+++ b/exercise.html
@@ -13,10 +13,28 @@
         </div>
         <div class="line">
             <div class="nav">
-            <a href="index.html" target="_blank" class="nav-a">Главная</a>
-            <a href="about.html" target="_blank" class="nav-a">О нас</a>
+            <a href="index.html" class="nav-a">Главная</a>
+            <a href="about.html" class="nav-a">О нас</a>
         </div>
         </div>
     </header>
+    <div class="filter-container">
+          <input type="text" id="filter-name" placeholder="Фильтр по группе мышц" class="filter-item">
+          <select name="" id="filter-difficulty" class="filter-item">
+            <option value="">Все сложности</option>
+            <option value="beginner">Начинающий</option>
+            <option value="intermediate">Средний</option>
+            <option value="expert">Эксперт</option>
+          </select>
+          <select name="" id="filter-type" class="filter-item">
+            <option value="cardio">Кардио</option>
+            <option value="olympic_weightlifting">Тяжелая атлетика</option>
+            <option value="plyometrics">Плиометрика</option>
+            <option value="powerlifting">Пауэрлифтинг</option>
+            <option value="strength">Сила</option>
+            <option value="stretching">Растяжка</option>
+            <option value="strongman">Силач</option>
+          </select>
+    </div>
 </body>
 </html>
