--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         </div>
         <div class="line">
             <div class="nav">
-            <a href="exercise.html" target="_blank" class="nav-a">Все упражнения</a>
-            <a href="about.html" target="_blank" class="nav-a">О нас</a>
+            <a href="exercise.html" class="nav-a">Все упражнения</a>
+            <a href="about.html" class="nav-a">О нас</a>
         </div>
         </div>
     </header>
     <section class="card-container">
            <div class="card">
                 <img src="/resourses/images/about-logo.png" alt="" class="card-img">
-                <p class="card-text">Что такое MySport?<a href="about.html" target="_blank">Узнать больше</a></p>
+                <p class="card-text">Что такое MySport?<a href="about.html" class="card-a">Узнать больше</a></p>
            </div>
            <div class="card">
                 <img src="/resourses/images/exercise-logo.png" alt="" class="card-img">
-                <p class="card-text">Весь список упражнений<a href="exercise.html" target="_blank">Перейти</a></p>
+                <p class="card-text">Весь список упражнений<a href="exercise.html" class="card-a">Перейти</a></p>
            </div>
     </section>
     <script src="script.js"></script>
