new cards in exercise.html

--- a/exercise.html
+++ b/exercise.html
@@ -36,5 +36,15 @@
             <option value="strongman">Силач</option>
           </select>
     </div>
+    <section class="card-container">
+           <div class="card">
+                <img src="/resourses/images/exercise-logo.png" alt="diff_logo" class="card-img">
+                <div class="parameter-container">
+                    <p class="parameter-text">Название:</p>
+                    <p class="parameter-text">Группы мышц:</p>
+                    <p class="parameter-text">Сложность:</p>
+                </div>
+           </div>
+    </section>
 </body>
 </html>
