--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
         </div>
     </header>
     <section class="card-container">
-           <div class="card">
-                <img src="/resourses/images/about-logo.png" alt="" class="card-img">
-                <p class="card-text">Что такое MySport?<a href="about.html" class="card-a">Узнать больше</a></p>
+           <div class="text-container">
+                <div class="card">
+                <img src="/resourses/images/about-logo.png" alt="about-logo" class="card-img">
+                <p class="card-text">Что такое MySport?<br><a href="about.html" class="card-a">Узнать больше</a></p>
            </div>
            <div class="card">
-                <img src="/resourses/images/exercise-logo.png" alt="" class="card-img">
-                <p class="card-text">Весь список упражнений<a href="exercise.html" class="card-a">Перейти</a></p>
+                <img src="/resourses/images/exercise-logo.png" alt="exercise-logo" class="card-img">
+                <p class="card-text">Весь список упражнений<br><a href="exercise.html" class="card-a">Перейти</a></p>
+           </div>
            </div>
     </section>
     <script src="script.js"></script>
