--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </header>
     <section class="card-container">
            <div class="text-container">
-                <div class="card">
+                <div class="card flex">
                 <img src="/resourses/images/about-logo.png" alt="about-logo" class="card-img">
                 <p class="card-text">Что такое MySport?<br><a href="about.html" class="card-a">Узнать больше</a></p>
            </div>
-           <div class="card">
+           <div class="card flex">
                 <img src="/resourses/images/exercise-logo.png" alt="exercise-logo" class="card-img">
                 <p class="card-text">Весь список упражнений<br><a href="exercise.html" class="card-a">Перейти</a></p>
            </div>
