added working filters

--- a/exercise.html
+++ b/exercise.html
@@ -55,42 +55,13 @@
             <option value="strongman">Силач</option>
           </select>
     </div>
-    <section class="card-container">
-           <div class="card">
-                <div class="card-top">
-                    <img src="/resourses/images/exercise-logo.png" alt="diff_logo" class="card-img">
-                    <ul class="parameter-container">
-                      <li class="parameter-text">Название:</li>
-                      <li class="parameter-text">Группы мышц:</li>
-                      <li class="parameter-text">Сложность:</li>
-                    </ul>
-                </div>
-                <div class="desc-btn-container">
-                    <p class="desc-btn">Показать/скрыть описание</p>
-                </div>
-                <div class="card-bottom hidden">
-                     <ul class="card-bottom-list">
-                        <li class="card-bottom-item">Тип:</li>
-                        <li class="card-bottom-item">Инструкции:</li>
-                        <li class="card-bottom-item">Оборудование:</li>
-                        <li class="card-bottom-item">Правила безопасности:</li>
-                     </ul>
-                </div>
-           </div>
+    <section class="card-container" id="cards">
+
     </section>
 
 
-
-
-
-
-
-
-
-
-
+    <script src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="jQuery.js"></script>
-    <script src="script.js"></script>
 </body>
 </html>
