--- a/about.html
+++ b/about.html
@@ -19,9 +19,9 @@
         </div>
     </header>
     <main>
-        <p class="about_text">MySport — это сайт, где можно быстро найти спортивные упражнения для любых целей: силы, выносливости или гибкости. Он помогает подобрать подходящие варианты и собрать собственную программу тренировок без лишних сложностей.
-Работает сервис на базе открытого <a href="https://www.api-ninjas.com/api/exercises" target="_blank" class="card-a">Exercises API</a>. Это большая база упражнений с описаниями, картинками и информацией о том, какие мышцы задействованы. Благодаря этому MySport показывает проверенные данные и делает поиск удобным и понятным.
-В итоге MySport — это простой инструмент для тех, кто хочет тренироваться эффективно и разнообразно. Здесь легко найти нужные упражнения и составить план, который подходит именно вам.</p>
+        <p class="about-text">MySport — это платформа, где можно быстро найти спортивные упражнения для любых целей: силы, выносливости или гибкости. Он помогает подобрать подходящие варианты для каждого.
+Работает сервис на базе открытого <a href="https://www.api-ninjas.com/api/exercises" target="_blank" class="card-a">Exercises API</a>. Это большая база упражнений с описаниями и информацией о том, какие мышцы задействованы. Благодаря этому MySport показывает проверенные данные и делает поиск удобным и понятным.
+В итоге MySport — это простой инструмент для тех, кто хочет тренироваться эффективно и разнообразно. Здесь легко найти нужные упражнения используя понятные фильтры.</p>
     </main>
 </body>
 </html>
