--- a/exercise.html
+++ b/exercise.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <div class="filter-container">
-          <select name="" id="filter-muscle" class="filter-item">
+          <select id="filter-muscle" class="filter-item">
             <option value="">Все мышцы</option>
             <option value="abdominals">Пресс</option>
             <option value="adductors">Аддукторы</option>
@@ -38,13 +38,13 @@
             <option value="quadriceps">Квадрицепс</option>
             <option value="triceps">Трицепс</option>
           </select>
-          <select name="" id="filter-difficulty" class="filter-item">
+          <select id="filter-difficulty" class="filter-item">
             <option value="">Все сложности</option>
             <option value="beginner">Начинающий</option>
             <option value="intermediate">Средний</option>
             <option value="expert">Эксперт</option>
           </select>
-          <select name="" id="filter-type" class="filter-item">
+          <select id="filter-type" class="filter-item">
             <option value="">Все типы</option>
             <option value="cardio">Кардио</option>
             <option value="olympic_weightlifting">Тяжелая атлетика</option>
@@ -55,12 +55,12 @@
             <option value="strongman">Силач</option>
           </select>
     </div>
-    <section class="card-container" id="cards">
+    <div class="card-container">
 
-    </section>
+    </div>
 
 
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="jQuery.js"></script>
 </body>
