--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         </div>
     </header>
-    <section class="card-container">
+    <div class="card-container">
            <div class="text-container">
                 <div class="card flex">
                 <img src="/resourses/images/about-logo.png" alt="about-logo" class="card-img">
@@ -29,6 +29,6 @@
                 <p class="card-text">Весь список упражнений<br><a href="exercise.html" class="card-a">Перейти</a></p>
            </div>
            </div>
-    </section>
+    </div>
 </body>
 </html>
